# foundry-togaf-agent-crew

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NEXT-STEPS.md  README.md  pyproject.toml
.foundry/: agent-metadata.yaml
.foundry/datasets/: golden-set.jsonl
.foundry/evaluators/: quality.yaml
.github/workflows/: ci.yml
copilot-studio/: openapi.yaml  wrapper-plan.md
scripts/: deploy.ps1  evaluate.ps1  provision-recover.ps1  provision.ps1  publish-to-github.ps1  register-agents.ps1
src/agents/: _base.py  business_architect.py  enterprise_architect.py  implementation_manager.py  solution_engineer.py  stakeholder_engagement_lead.py
src/orchestrator/: Dockerfile  agent.yaml  evaluate.py  main.py  register_agents.py  server.py  topologies.py
